# trading_network_for_electronics

./: .env.template  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
static/css/: mailing.css  style.css
static/js/: scripts.js
templates/: base.html  home.html
templates/includes/: footer.html  header.html
trading_network/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
trading_network/fixtures/: trading_network_data.json
trading_network/management/commands/: load_trading_data.py
trading_network/migrations/: 0001_initial.py
users/: admin.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  profile_edit.html  profile_edit_api.html  registration.html  user_list.html  user_list_api.html
users/templates/users/includes/: footer.html  header.html
